force-app/main/default/objects/DupAccByName__c/DupAccByName__c.object-meta.xml
<CustomObject>
    <description>Duplicate accounts by name (One time Object)</description>
    <label>DupAccByName</label>
    <nameField>
        <label>AutoName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupAccsByName</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>