force-app/main/default/objects/DupAccByName__c/fields/DMS_Ids__c.field-meta.xml
<CustomField>
    <fullName>DMS_Ids__c</fullName>
    <label>DMS Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>