force-app/main/default/objects/DupAccByName__c/fields/ErrorHead__c.field-meta.xml
<CustomField>
    <fullName>ErrorHead__c</fullName>
    <label>ErrorHead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>