force-app/main/default/objects/DupAccByName__c/fields/ErrorMsg__c.field-meta.xml
<CustomField>
    <fullName>ErrorMsg__c</fullName>
    <label>ErrorMsg</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>