force-app/main/default/objects/DupAccByName__c/fields/Master_Create_Sharepoint_Folder__c.field-meta.xml
<CustomField>
    <fullName>Master_Create_Sharepoint_Folder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Create Sharepoint Folder</label>
    <type>Checkbox</type>
</CustomField>