force-app/main/default/objects/DupAccByName__c/fields/Master_SC_SharePoint_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_SC_SharePoint_Folder_Id__c</fullName>
    <label>Master SC SharePoint Folder Id</label>
    <type>TextArea</type>
</CustomField>