force-app/main/default/objects/DupAccByName__c/fields/Master_SGS_SharePoint_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_SGS_SharePoint_Folder_Id__c</fullName>
    <label>Master SGS SharePoint Folder Id</label>
    <type>TextArea</type>
</CustomField>