force-app/main/default/objects/DupAccByName__c/fields/MasterAccount__c.field-meta.xml
<CustomField>
    <fullName>MasterAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MasterAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DupAccsByName-Master</relationshipLabel>
    <relationshipName>DupAccsByNameMaster</relationshipName>
    <type>Lookup</type>
</CustomField>