force-app/main/default/objects/DupAccByName__c/fields/MasterOpportunityFolderSharePointId__c.field-meta.xml
<CustomField>
    <fullName>MasterOpportunityFolderSharePointId__c</fullName>
    <label>MasterOpportunityFolderSharePointId</label>
    <type>TextArea</type>
</CustomField>