force-app/main/default/objects/DupAccByName__c/fields/MasterOpportunityFolderSharePointURL__c.field-meta.xml
<CustomField>
    <fullName>MasterOpportunityFolderSharePointURL__c</fullName>
    <label>MasterOpportunityFolderSharePointURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>