force-app/main/default/objects/DupAccByName__c/fields/MasterSCOpportunityFolderSharePointId__c.field-meta.xml
<CustomField>
    <fullName>MasterSCOpportunityFolderSharePointId__c</fullName>
    <label>MasterSCOpportunityFolderSharePointId</label>
    <type>TextArea</type>
</CustomField>