force-app/main/default/objects/DupAccByName__c/fields/MasterSCOpportunityFolderSharePointURL__c.field-meta.xml
<CustomField>
    <fullName>MasterSCOpportunityFolderSharePointURL__c</fullName>
    <label>MasterSCOpportunityFolderSharePointURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>