force-app/main/default/objects/DupAccByName__c/fields/MasterSGSOpportunityFolderSharePointId__c.field-meta.xml
<CustomField>
    <fullName>MasterSGSOpportunityFolderSharePointId__c</fullName>
    <label>MasterSGSOpportunityFolderSharePointId</label>
    <type>TextArea</type>
</CustomField>