force-app/main/default/objects/DupAccByName__c/fields/MasterSGSOpportunityFolderSharePointURL__c.field-meta.xml
<CustomField>
    <fullName>MasterSGSOpportunityFolderSharePointURL__c</fullName>
    <label>MasterSGSOpportunityFolderSharePointURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>