force-app/main/default/objects/DupAccByName__c/fields/MasterSSOpportunityFolderSharePointId__c.field-meta.xml
<CustomField>
    <fullName>MasterSSOpportunityFolderSharePointId__c</fullName>
    <label>MasterSSOpportunityFolderSharePointId</label>
    <type>TextArea</type>
</CustomField>