force-app/main/default/objects/DupAccByName__c/fields/MasterSSOpportunityFolderSharePointURL__c.field-meta.xml
<CustomField>
    <fullName>MasterSSOpportunityFolderSharePointURL__c</fullName>
    <label>MasterSSOpportunityFolderSharePointURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>