force-app/main/default/objects/DupAccByName__c/fields/Merge_Create_Sharepoint_Folder__c.field-meta.xml
<CustomField>
    <fullName>Merge_Create_Sharepoint_Folder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merge Create Sharepoint Folder</label>
    <type>Checkbox</type>
</CustomField>