force-app/main/default/objects/DupAccByName__c/fields/Merge_SC_SharePoint_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Merge_SC_SharePoint_Folder_Id__c</fullName>
    <label>Merge SC SharePoint Folder Id</label>
    <type>TextArea</type>
</CustomField>