force-app/main/default/objects/DupAccByName__c/fields/Merge_SC_SharePoint_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>Merge_SC_SharePoint_Folder_URL__c</fullName>
    <label>Merge SC SharePoint Folder URL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>