force-app/main/default/objects/DupAccByName__c/fields/MergeAccount__c.field-meta.xml
<CustomField>
    <fullName>MergeAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MergeAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DupAccsByName-Merge</relationshipLabel>
    <relationshipName>DupAccsByNameMerge</relationshipName>
    <type>Lookup</type>
</CustomField>