force-app/main/default/objects/DupAccByName__c/fields/MergeAccountId__c.field-meta.xml
<CustomField>
    <fullName>MergeAccountId__c</fullName>
    <label>MergeAccountId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>