force-app/main/default/objects/DupAccByName__c/fields/MergeAccountName__c.field-meta.xml
<CustomField>
    <fullName>MergeAccountName__c</fullName>
    <label>MergeAccountName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>