force-app/main/default/objects/DupAccByName__c/fields/MergeOpportunityFolderSharePointId__c.field-meta.xml
<CustomField>
    <fullName>MergeOpportunityFolderSharePointId__c</fullName>
    <label>MergeOpportunityFolderSharePointId</label>
    <type>TextArea</type>
</CustomField>