force-app/main/default/objects/DupAccByName__c/fields/MergeOpportunityFolderSharePointURL__c.field-meta.xml
<CustomField>
    <fullName>MergeOpportunityFolderSharePointURL__c</fullName>
    <label>MergeOpportunityFolderSharePointURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>