force-app/main/default/objects/DupAccByName__c/fields/MergeSCOpportunityFolderSharePointId__c.field-meta.xml
<CustomField>
    <fullName>MergeSCOpportunityFolderSharePointId__c</fullName>
    <label>MergeSCOpportunityFolderSharePointId</label>
    <type>TextArea</type>
</CustomField>