force-app/main/default/objects/DupAccByName__c/fields/MergeSCOpportunityFolderSharePointURL__c.field-meta.xml
<CustomField>
    <fullName>MergeSCOpportunityFolderSharePointURL__c</fullName>
    <label>MergeSCOpportunityFolderSharePointURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>