force-app/main/default/objects/DupAccByName__c/fields/MergeSGSOpportunityFolderSharePointId__c.field-meta.xml
<CustomField>
    <fullName>MergeSGSOpportunityFolderSharePointId__c</fullName>
    <label>MergeSGSOpportunityFolderSharePointId</label>
    <type>TextArea</type>
</CustomField>