force-app/main/default/objects/DupAccByName__c/fields/MergeSGSOpportunityFolderSharePointURL__c.field-meta.xml
<CustomField>
    <fullName>MergeSGSOpportunityFolderSharePointURL__c</fullName>
    <label>MergeSGSOpportunityFolderSharePointURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>