force-app/main/default/objects/DupAccByName__c/fields/MergeSSOpportunityFolderSharePointId__c.field-meta.xml
<CustomField>
    <fullName>MergeSSOpportunityFolderSharePointId__c</fullName>
    <label>MergeSSOpportunityFolderSharePointId</label>
    <type>TextArea</type>
</CustomField>