force-app/main/default/objects/DupAccByName__c/fields/MergeSSOpportunityFolderSharePointURL__c.field-meta.xml
<CustomField>
    <fullName>MergeSSOpportunityFolderSharePointURL__c</fullName>
    <label>MergeSSOpportunityFolderSharePointURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>